--- a/GitHub-Actions/deploy.yml
+++ b/GitHub-Actions/deploy.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # github actions provides runner env for executing jobs, using ubuntu
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2 # aka git clone
 
     - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
+      uses: jakejarvis/s3-sync-action@master # S3 sync marketplace action
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
@@ -21,4 +21,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # set up variables for security
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # set up variables for security
         AWS_REGION: 'eu-west-2'  
-        SOURCE_DIR: './'  
+        SOURCE_DIR: './'  # root dir
