--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,9 @@ name: Deploy to S3
 on:
   push:
     branches:
-      - main  
+      - main
+    paths:
+      - 'Static_Website/**'
 
 jobs:
   deploy:
